# proofgate

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: DESIGN.md  eval-gate-demo.md
eval/: baseline.json  golden.jsonl  thresholds.toml
eval/harness/: __init__.py  client.py  metrics.py  run.py
eval/harness/tests/: test_metrics.py
eval/tools/: generate_demo_data.py
services/retrieval-api/: .dockerignore  Dockerfile  pyproject.toml
services/retrieval-api/app/: __init__.py  config.py  embedders.py  main.py  retrieval.py  telemetry.py
services/retrieval-api/corpus/: demo-bad.jsonl  demo.jsonl
services/retrieval-api/tests/: conftest.py  test_health.py  test_search.py  test_telemetry.py
terraform/: .checkov.yaml  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/delivery/: main.tf
terraform/observability/: main.tf
terraform/runtime/: alb.tf  ecs.tf  iam.tf  network.tf  outputs.tf  s3.tf  variables.tf  versions.tf
